<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_appdeveloper_content">Software Developer (Stuttgart, Germany)</string>
    <string name="about_appdeveloper_content2">The main goal of this app is to support people with low vision by providing an easy to use digital magnifier. As a vision aid it extends the functionality of basic magnifier apps by adding color filer modes, picture sharing, intuitive gesture control and one-hand operation.</string>
    <string name="about_appdeveloper_content3">For questions or feedback, please use the mail button.</string>
    <string name="about_appdeveloper_rating">If you like this app and want to support it, you can rate it here in the Google Play Store:</string>
    <string name="about_appdeveloper_title">Matthias Stoehr</string>
    <string name="about_header">About The App Developer</string>
    <string name="app_name">weZoom</string>
    <string name="app_package">de.stoehr.loviapps.wezoom</string>
    <string name="app_rater_btn_no">NO THANKS</string>
    <string name="app_rater_btn_remind">REMIND ME</string>
    <string name="app_rater_btn_yes">RATE NOW</string>
    <string name="app_rater_desc">If you like this app, please support it with a short review. Thank you!</string>
    <string name="app_rater_title">Rate This App</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="author_email">loviapps.contact@gmail.com</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="camera_permissions_missing_dialog_description">"Tho use this app the following permissions have to be granted: 
• Access to the camera feature to show the live view and add color filters 
• Access to the external storage to save pictures and share them with other apps"</string>
    <string name="camsurfaceview_contentdesc">Camera View</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="closeadvancedoptions_button_contentdesc">Close advanced options</string>
    <string name="continuousfocus_checkbox_contentdesc">Continuous focus</string>
    <string name="debug_category_available_preview_sizes_ordered">Available Preview Sizes</string>
    <string name="debug_category_focus">Camera Focus</string>
    <string name="debug_category_rendering">Rendering</string>
    <string name="debug_category_supportedfocus">Supported Focus Modes</string>
    <string name="debug_header">Application Metrics</string>
    <string name="debug_metric_cameraSensorMountOrientation">Sensor Orientation</string>
    <string name="debug_metric_currentSurfaceViewSize">Surface View Size</string>
    <string name="debug_metric_focus_current">Selected Focus Mode</string>
    <string name="debug_metric_focus_default">Default Focus Mode</string>
    <string name="debug_metric_focus_maxFocusAreas">Max Focus Areas</string>
    <string name="debug_metric_focus_maxMeteringAreas">Max Metering Areas</string>
    <string name="debug_metric_isCameraSensorMountedUpsidedown">Sensor Upsidedown</string>
    <string name="debug_metric_previewsize">Camera Preview Size</string>
    <string name="debug_metric_realDisplaySize">Real Display Size</string>
    <string name="desc_settings_allow_advanced_gestures">Enables the advanced touch gestures. An overview of all gestures can be found in the user manual within the App-Info screen.</string>
    <string name="desc_settings_allow_fullscreen_lock">If enabled, you can press and hold the fullscreen toggle for one second (long-press), to lock or unlock the fullscreen mode. The lock will prevent you from accidentally clicking the toggle while zooming.</string>
    <string name="desc_settings_camera_zoom_ratios">Use the camera zoom to get the best zoom quality.</string>
    <string name="desc_settings_color_filter">Activate or deactivate specific color filters</string>
    <string name="desc_settings_flashlight_on_startup">Always start camera with flashlight on.</string>
    <string name="desc_settings_highest_quality">Enable highest resolution of the camera preview. Disable it to manually select a resolution.</string>
    <string name="desc_settings_keep_images">Allows the permanent storage of all images of this app (stored in /weZoom). The images are no longer deleted automatically.</string>
    <string name="desc_settings_lefthanded">Rearrange the view elements to make them more suitable for left-handed users.</string>
    <string name="desc_settings_max_zoom_level">Select a value to add to the maximum zoom level</string>
    <string name="desc_settings_more_color_detail">Show color filters with more color details. If disabled, only the two main colors are shown without intermediate contrast stages.</string>
    <string name="desc_settings_show_share_image_dialog">Opens the share dialog each time a photo was taken.</string>
    <string name="desc_settings_show_zoom_status">Enables the label showing the current zoom level on the screen.</string>
    <string name="desc_settings_themes">Switch between different themes for the user interface.</string>
    <string name="desc_settings_volume_key_triggers">Assign a specific action to the volume keys.</string>
    <string name="explainAdvancedOptions_header">Advanced Options</string>
    <string name="explainAdvancedTouchGestures_content">The advanced gestures need to be enabled in settings! Some gestures may not be compatible with TalkBack or other voice assistants. It is recommended to turn them off when using advanced gestures.</string>
    <string name="explainAdvancedTouchGestures_header">Advanced Touch Gestures (BETA)</string>
    <string name="explainColorFilterGestures_content">Tap with 2 fingers</string>
    <string name="explainColorFilterGestures_title">Switch Color Filter</string>
    <string name="exposurecompensation_seekbar_contentdesc">Camera exposure compensation</string>
    <string name="flashlight_button_contentdesc">Toggle flashlight</string>
    <string name="pasuerendering_button_contentdesc">Pause camera</string>
    <string name="rateThisApp_button_contentdesc">Rate this app in Google Play Store</string>
    <string name="resetadvancedoptions_button_contentdesc">Reset advanced options</string>
    <string name="settings_color_filter_black_on_green">Black on Green</string>
    <string name="settings_color_filter_black_on_white">Black on White</string>
    <string name="settings_color_filter_black_on_yellow">Black on Yellow</string>
    <string name="settings_color_filter_blue_on_white">Blue on White</string>
    <string name="settings_color_filter_blue_on_yellow">Blue on Yellow</string>
    <string name="settings_color_filter_green_on_black">Green on Black</string>
    <string name="settings_color_filter_white_on_black">White on Black</string>
    <string name="settings_color_filter_white_on_blue">White on Blue</string>
    <string name="settings_color_filter_yellow_on_black">Yellow on Black</string>
    <string name="settings_color_filter_yellow_on_blue">Yellow on Blue</string>
    <string name="showAdvancedoptions_button_contentdesc">Show advanced options</string>
    <string name="showappinfo_button_contentdesc">App info and guide</string>
    <string name="showsettings_button_contentdesc">Settings</string>
    <string name="switchcolorfilter_button_contentdesc">Switch color filter</string>
    <string name="takepicture_button_contentdesc">Take and share picture</string>
    <string name="threshold_seekbar_contentdesc">Color filter threshold</string>
    <string name="title_settings_allow_advanced_gestures">Advanced Touch Gestures (BETA)</string>
    <string name="title_settings_allow_fullscreen_lock">Fullscreen Lock</string>
    <string name="title_settings_camera_zoom_ratios">Camera Zoom</string>
    <string name="title_settings_category_camera">Camera</string>
    <string name="title_settings_category_general">Color Filters</string>
    <string name="title_settings_category_misc">Misc</string>
    <string name="title_settings_category_zoom">Zoom</string>
    <string name="title_settings_color_filter">Select Color Filter</string>
    <string name="title_settings_flashlight_on_startup">Always start with Flashlight</string>
    <string name="title_settings_highest_quality">Highest Resolution</string>
    <string name="title_settings_keep_images">Permanent Storage Of Images</string>
    <string name="title_settings_lefthanded">Left-Handed Mode</string>
    <string name="title_settings_max_zoom_level">Zoom Level Extension</string>
    <string name="title_settings_more_color_details">Color Filters With Details</string>
    <string name="title_settings_show_share_image_dialog">Share Images</string>
    <string name="title_settings_show_zoom_status">Display Current Zoom Level</string>
    <string name="title_settings_themes">Theme</string>
    <string name="title_settings_volume_key_triggers">Volume Key Action</string>
    <string name="toggle_fullscreen_button_contentdesc">Toggle fullscreen</string>
    <string name="zoomfactor_textview_contentdesc">Zoom factor</string>
</resources>