<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentStart="true">
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:paddingLeft="@dimen/content_padding" android:paddingRight="@dimen/content_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Headline" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/content_part_margin_top" android:layout_marginBottom="@dimen/content_part_margin_bottom" android:text="@string/about_header" />
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Title" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_appdeveloper_title" />
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/content_part_margin_bottom" android:text="@string/about_appdeveloper_content" />
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/content_part_margin_bottom" android:text="@string/about_appdeveloper_content2" />
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_appdeveloper_rating" />
            <ImageButton android:layout_gravity="center" android:id="@id/rateThisApp" android:background="@drawable/button_bg_round" android:padding="@dimen/big_button_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/fab_margin" android:scaleType="fitCenter" android:adjustViewBounds="true" android:tint="@color/md_yellow_A200" android:contentDescription="@string/rateThisApp_button_contentdesc" app:srcCompat="@drawable/ic_star_black_24dp" />
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/content_part_margin_bottom" android:text="@string/about_appdeveloper_content3" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>