<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/camSurfaceViewHolder" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <de.stoehr.loviapps.wezoom.CamSurfaceView android:id="@id/camSurfaceViewID" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/camsurfaceview_contentdesc" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/camSurfaceViewFrame" android:background="@drawable/shape_white_frame" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <de.stoehr.loviapps.wezoom.FocusRectView android:id="@id/focusPaintViewID" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:baselineAligned="false" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentStart="true">
        <LinearLayout android:gravity="top" android:padding="@dimen/main_container_padding" android:layout_width="wrap_content" android:layout_height="fill_parent">
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Title" android:gravity="center" android:id="@id/tvZoomFactor" android:background="@drawable/label_bg_rectangle" android:layout_width="50.0dip" android:layout_height="50.0dip" android:text="1.0x" android:shadowColor="@color/text_shadow" android:shadowDx="2.0" android:shadowDy="2.0" android:shadowRadius="2.0" android:contentDescription="@string/zoomfactor_textview_contentdesc" android:textAlignment="center" />
        </LinearLayout>
        <FrameLayout android:id="@id/layoutAdvancedOptionsContainer" android:padding="@dimen/main_container_padding" android:clickable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <FrameLayout android:layout_gravity="right" android:id="@id/layoutAdvancedOptions" android:clickable="true" android:layout_width="@dimen/advanced_options_box_width" android:layout_height="wrap_content">
                <ImageView android:id="@id/layoutAdvancedOptionsBackground" android:background="@color/black_transparent" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                <LinearLayout android:orientation="horizontal" android:padding="@dimen/advanced_options_padding" android:layout_width="fill_parent" android:layout_height="fill_parent" android:baselineAligned="false">
                    <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                        <LinearLayout android:orientation="horizontal" android:id="@id/layoutExposureCompensation" android:paddingTop="@dimen/advanced_options_elements_padding" android:paddingBottom="@dimen/advanced_options_elements_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <ImageView android:id="@id/imgExposureCompensation" android:layout_width="@dimen/advanced_options_icons_size" android:layout_height="@dimen/advanced_options_icons_size" android:scaleType="fitCenter" android:adjustViewBounds="true" android:cropToPadding="false" app:srcCompat="@drawable/ic_brightness_medium_black_24dp" />
                            <SeekBar android:layout_gravity="center_vertical" android:id="@id/seekBarExposureCompensation" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="100" android:progress="50" android:thumb="@drawable/seekbar_thumb" android:contentDescription="@string/exposurecompensation_seekbar_contentdesc" />
                        </LinearLayout>
                        <LinearLayout android:orientation="horizontal" android:paddingTop="@dimen/advanced_options_elements_padding" android:paddingBottom="@dimen/advanced_options_elements_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <ImageView android:id="@id/imgThreshold" android:layout_width="@dimen/advanced_options_icons_size" android:layout_height="@dimen/advanced_options_icons_size" android:scaleType="fitCenter" android:adjustViewBounds="true" android:cropToPadding="false" app:srcCompat="@drawable/ic_exposure_black_24dp" />
                            <SeekBar android:layout_gravity="center_vertical" android:id="@id/seekBarThreshold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="100" android:progress="50" android:thumb="@drawable/seekbar_thumb" android:contentDescription="@string/threshold_seekbar_contentdesc" />
                        </LinearLayout>
                        <LinearLayout android:orientation="horizontal" android:id="@id/layoutContinuousFocus" android:paddingTop="@dimen/advanced_options_elements_padding" android:paddingBottom="@dimen/advanced_options_elements_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <ImageView android:id="@id/imgContinuousFocus" android:layout_width="@dimen/advanced_options_icons_size" android:layout_height="@dimen/advanced_options_icons_size" android:scaleType="fitCenter" android:adjustViewBounds="true"  android:cropToPadding="false" app:srcCompat="@drawable/ic_center_focus_strong_black_24dp" />
                            <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                                <CheckBox android:gravity="center" android:id="@id/cbContinuousFocus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:contentDescription="@string/continuousfocus_checkbox_contentdesc" android:scaleX="1.5" android:scaleY="1.5" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/advanced_options_elements_padding" android:layout_width="@dimen/small_button_container_width" android:layout_height="fill_parent">
                        <LinearLayout android:gravity="right" android:orientation="vertical" android:paddingTop="@dimen/advanced_options_elements_padding" android:paddingBottom="@dimen/advanced_options_elements_padding" android:layout_width="fill_parent" android:layout_height="fill_parent">
                            <ImageButton android:id="@id/btnCloseAdvancedOptions" android:background="@drawable/button_bg_round" android:padding="@dimen/small_button_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/small_button_margin" android:scaleType="fitCenter" android:adjustViewBounds="true" android:tint="@color/white" android:contentDescription="@string/closeadvancedoptions_button_contentdesc" app:srcCompat="@drawable/ic_close_black_24dp" />
                            <ImageButton android:id="@id/btnResetAdvancedOptions" android:background="@drawable/button_bg_round" android:padding="@dimen/small_button_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/small_button_margin" android:scaleType="fitCenter" android:adjustViewBounds="true" android:tint="@color/white" android:contentDescription="@string/resetadvancedoptions_button_contentdesc" app:srcCompat="@drawable/ic_replay_black_24dp" />
                            <ImageButton android:id="@id/btnShowAppInfo" android:background="@drawable/button_bg_round" android:padding="@dimen/small_button_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/small_button_margin" android:scaleType="fitCenter" android:adjustViewBounds="true" android:tint="@color/white" android:contentDescription="@string/showappinfo_button_contentdesc" app:srcCompat="@drawable/ic_help_black_24dp" />
                            <ImageButton android:id="@id/btnShowSettings" android:background="@drawable/button_bg_round" android:padding="@dimen/small_button_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/small_button_margin" android:scaleType="fitCenter" android:adjustViewBounds="true" android:tint="@color/white" android:contentDescription="@string/showsettings_button_contentdesc" app:srcCompat="@drawable/ic_settings_black_24dp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </FrameLayout>
        <FrameLayout android:id="@id/layoutMainButtons" android:padding="@dimen/main_container_padding" android:layout_width="@dimen/big_button_container_width" android:layout_height="fill_parent">
            <LinearLayout android:gravity="top" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <ImageButton android:id="@id/btnShowAdvancedOptions" android:background="@drawable/button_bg_round" android:padding="@dimen/big_button_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/big_button_margin" android:scaleType="fitCenter" android:adjustViewBounds="true" android:tint="@color/white" android:contentDescription="@string/showAdvancedoptions_button_contentdesc" app:srcCompat="@drawable/ic_more_vert_black_24dp" />
                <ImageButton android:id="@id/btnSwitchAccessibilityMode" android:background="@drawable/button_bg_round" android:padding="@dimen/big_button_padding" android:longClickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/big_button_margin" android:scaleType="fitCenter" android:adjustViewBounds="true" android:tint="@color/md_yellow_A200" android:contentDescription="@string/switchcolorfilter_button_contentdesc" app:srcCompat="@drawable/ic_font_download_black_24dp" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <ImageButton android:id="@id/btnPauseRendering" android:background="@drawable/button_bg_round" android:padding="@dimen/big_button_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/big_button_margin" android:scaleType="fitCenter" android:adjustViewBounds="true" android:tint="@color/white" android:contentDescription="@string/pasuerendering_button_contentdesc" app:srcCompat="@drawable/ic_pause_black_24dp" />
            </LinearLayout>
            <LinearLayout android:gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <ImageButton android:id="@id/btnTakePicture" android:background="@drawable/button_bg_round" android:padding="@dimen/big_button_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/big_button_margin" android:scaleType="fitCenter" android:adjustViewBounds="true" android:tint="@color/md_light_green_A700" android:contentDescription="@string/takepicture_button_contentdesc" app:srcCompat="@drawable/ic_photo_camera_black_24dp" />
                <ImageButton android:id="@id/btnFlashlight" android:background="@drawable/button_bg_round" android:padding="@dimen/big_button_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/big_button_margin" android:scaleType="fitCenter" android:adjustViewBounds="true" android:tint="@color/white" android:contentDescription="@string/flashlight_button_contentdesc" app:srcCompat="@drawable/ic_wb_incandescent_black_24dp" />
                <ImageButton android:id="@id/btnToggleFullscreen" android:background="@android:color/transparent" android:padding="@dimen/big_button_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/big_button_margin" android:scaleType="fitCenter" android:adjustViewBounds="true" android:contentDescription="@string/toggle_fullscreen_button_contentdesc" app:srcCompat="@drawable/ic_twotone_toggle_off_24px" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>